--- a/build-static-html/index.html
+++ b/build-static-html/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="cache-control" content="no-cache" />
-    <title>记事本</title>
+    <title></title>
   </head>
   <body>
     <div id="app"></div>
